openmediavault (5.6.1-1) stable; urgency=low

  * Issue #970: HPSA HBA improvements causing a regression when
    controller is in RAID mode.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 21 Feb 2021 13:16:58 +0100

openmediavault (5.6.0-1) stable; urgency=low

  * Improve UI to import a users public SSH key. Now SSH public keys
    in RFC 4716 and OpenSSH format can be imported.
  * Fix a SMB recycle bin cleanup script issue. Execute run-args with
    the '--new-session' option to ensure the scripts will run until
    completion. This should prevent subsequent locks.
  * Remove 'No certificate request' option from 'FTP | SSL/TLS' page
    because it is deprecated in proftpd.
  * Improve monit/proftpd connection test. This should prevent errors
    when SSL/TLS is enabled.
  * Enable NTP by default on new installations.
  * Fix a bug in omv-env when trying to set a string separated
    by blanks.
  * Rename various OMV Python modules because of import issues.
  * Issue #944: Hardening storage backend to prevent errors in LXC.
  * Issue #959: Improve SMART support for HPSA HBA.
  * Issue #968: Configured quota is not displayed correct.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 19 Jan 2021 21:00:39 +0100

openmediavault (5.5.23-1) stable; urgency=low

  * Update locales.
  * Issue #505: Prepend explanation to cron-apt notifications.
  * Issue #926: Refactor code that is responsible for sending the
    notification email on first UI log in.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 12 Jan 2021 13:11:06 +0100

openmediavault (5.5.22-1) stable; urgency=low

  * Fixing package management issue with new UDEV rules. The old
    file was not removed automatically. Because of that please notice
    the information about the new UDEV rules in 5.5.21.
  * Fix monit/proftpd issue when implicit TLS is enabled.
  * Issue #921: Prevent using WLAN NICs for bond and bridge interfaces.