@@ -24,6 +24,11 @@
 				"type": "integer",
 				"minimum": 0,
 				"required": true
+			},
+			"length": {
+				"type": "integer",
+				"minimum": 1024,
+				"required": false
 			}
 		}
 	}
