@@ -2,6 +2,9 @@ openmediavault (5.6.1-1) stable; urgency=low
 
   * Issue #970: HPSA HBA improvements causing a regression when
     controller is in RAID mode.
+  * Issue #972: Improve Exec::getOutput RPC to prevent running into
+    memory/resource limits by reading only a given number of bytes
+    from the command output.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 21 Feb 2021 13:16:58 +0100
 
